fix publication alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1113,7 +1113,7 @@ i {
     }
 
     .publication-list ul.publication-list-wrapper li.publication {
-      margin: 20px 40px 10px 0;
+      /*margin: 20px 40px 10px 0;*/
     }
   }
 
